Back to working version of BIDDFS.